--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
 			<version>1.18.16</version>
 			<scope>provided</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.18</version>
+			<scope>runtime</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
